--- a/app.json
+++ b/app.json
@@ -1,12 +1,12 @@
 {
   "expo": {
-    "name": "carteirinha-online-ufscar",
+    "name": "Carteirinha UFSCar",
     "slug": "carteirinha-online-ufscar",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/ufscar_logo.png",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/ufscar_logo.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -23,7 +23,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.matheusranzani.carteirinhaonlineufscar"
     },
     "web": {
       "favicon": "./assets/favicon.png"
